<resources>
    <string name="app_name">Paleontology</string>
    <string name="workbench">工作平台</string>
    <string name="personal_data">个人数据</string>
    <string name="paleontological_data">古生物数据</string>
    <string name="video_chat">视频会商</string>
    <string name="video_recording">现场录像视频</string>

    <string name="hint_login_username">请输入手机号码</string>
    <string name="hint_login_password">输入密码</string>
    <string name="login">登录</string>
    <string name="logSetting">设置</string>
    <string name="logregist">注册新用户</string>
    <string name="logName">208古生物化石保护管理工作</string>
    <string name="please_input_limit_pwd">请输入数字或字母</string>
    <!--设置-->
    <string name="settingIp">请设置ip</string>
    <string name="settingPort">请设置端口</string>
    <string name="settingSure">确定</string>
    <string name="personneldatetop">人员数据</string>

    <string name="base_data">基础数据</string>
    <string name="scientific_value">科学价值</string>
    <string name="art_value">美学价值</string>
    <string name="natural_environment_condition">自然环境状况</string>
    <string name="data_sources">数据来源</string>
    <string name="picture">图片</string>


    <string name="paleontodatetop">基础数据</string>
    <string name="paleontodate">详细数据</string>
    <string name="ceshi">测试</string>
    <!--化石-->
    <string name="fossiNum">化石编号:</string>
    <string name="packingNum">装箱编号:</string>
    <string name="fossilSpecies">化石种类:</string>
    <string name="fossilSystemClassification">化石系统分类:</string>
    <string name="earlyFossilName">初定化石名称:</string>
    <string name="excavationUnit">发掘单位：</string>
    <string name="excavationDate">发掘日期：</string>
    <string name="excavationPerson">发掘人员：</string>
    <string name="producer">产地：</string>
    <string name="possilLon">经度：</string>
    <string name="possilLat">纬度：</string>
    <string name="fossilPosition">地理位置：</string>
    <string name="geologicaAge">地质时代：</string>
    <string name="stratumHorizon">底层层位：</string>
    <string name="lithology">岩性：</string>
    <string name="burialState">埋藏状态：</string>
    <string name="keepstatus">保存情况:</string>
    <string name="featureDescription">特征描述：</string>
    <string name="fossilWhereabouts">化石去向：</string>
    <string name="fossilSize">化石尺寸：</string>


    <string name="category_all">推荐</string>
    <string name="category_all_my">推荐</string>
    <string name="category_society">社会</string>
    <string name="category_subscribe">订阅</string>
    <string name="category_video">视频</string>
    <string name="category_health">健康</string>
    <string name="category_sports">体育</string>
    <string name="category_tech">科技</string>
    <string name="category_car">汽车</string>
    <string name="category_entertainment">娱乐</string>
    <string name="category_finance">财经</string>
    <string name="category_military">军事</string>
    <string name="category_world">国际</string>
    <string name="category_hot">热点</string>
    <string name="category_positive">正能量</string>
    <string name="category_essay_joke">段子</string>
    <string name="category_image_funny">趣图</string>
    <string name="category_image_ppmm">美女</string>
    <string name="category_movie">电影</string>
    <string name="category_digital">数码</string>
    <string name="category_news_fashion">时尚</string>
    <string name="category_rumor">辟谣</string>
    <string name="category_marvel">奇葩</string>
    <string name="category_news_game">游戏</string>
    <string name="category_news_travel">旅游</string>
    <string name="category_news_baby">育儿</string>
    <string name="category_fitness">减肥</string>
    <string name="category_news_regimen">养生</string>
    <string name="category_news_food">美食</string>
    <string name="category_government">政务</string>
    <string name="category_news_history">历史</string>
    <string name="category_news_discovery">探索</string>
    <string name="category_news_story">故事</string>
    <string name="category_news_essay">美文</string>
    <string name="category_emotion">情感</string>
    <string name="category_essay_saying">语录</string>
    <string name="category_image_wonderful">美图</string>
    <string name="category_news_house">家居</string>
    <string name="category_news_home">房产</string>
    <string name="category_funny">搞笑</string>
    <string name="category_news_astrology">星座</string>
    <string name="category_news_culture">文化</string>
    <string name="category_graduate">毕业生</string>
    <string name="ceshi"></string>

</resources>
