<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_workbench"
    android:orientation="vertical"
    tools:context="com.nandity.paleontology.common.MainActivity">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/green">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/workbench"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_below="@+id/rl_title"
        android:layout_marginTop="35dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_personal_data"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@mipmap/personal_data" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/personal_data"
                    android:textColor="@color/text_workbench"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_paleontological_data"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@mipmap/paleontological_data" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/paleontological_data"
                    android:textColor="@color/text_workbench"
                    android:textSize="20sp" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@mipmap/video_recording" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/video_recording"
                    android:textColor="@color/text_workbench"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@mipmap/video_chat" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/video_chat"
                    android:textColor="@color/text_workbench"
                    android:textSize="20sp" />


            </LinearLayout>


        </LinearLayout>
    </LinearLayout>


    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/actions_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        fab:fab_addButtonColorNormal="@color/fab_menu"
        fab:fab_addButtonColorPressed="@color/gray"
        fab:fab_addButtonPlusIconColor="@color/white"
        fab:fab_labelStyle="@style/menu_labels_style"
        >

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_size="mini"
            fab:fab_icon="@mipmap/update"
            fab:fab_colorPressed="@color/greenish"
            fab:fab_title="更新" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_signout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_icon="@mipmap/sign_out"
            fab:fab_size="mini"
            fab:fab_colorPressed="@color/greenish"
            fab:fab_title="注销" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>


</RelativeLayout>
